# egg-dsd

./: Cargo.toml
src/: attempt0.rs  attempt1.rs  attempt2.rs  attempt3.rs  lib.rs  main.rs
src/attempt3/: rewrites.rs
src/attempt4/: mod.rs  rewrites.rs
src/language/: mod.rs  rewrites.rs
