[package]
name = "egg-dsd"
version = "0.1.0"
authors = ["Gus Smith <guscomps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.5.3"
itertools = "0.9.0"
env_logger = "0.7.1"
test-logger = "0.1.0"
log = "0.4.8"

[dependencies.egg]
git = "https://github.com/mwillsey/egg"
rev = "911fcd889e77efb90fd5e0489420009c4d2dec41"